chores(settings): update settings for vscode

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,33 +1,33 @@
 {
-    "[*]": {
-        "editor.tabSize": 4
+  "[*]": {
+    "editor.tabSize": 4
+  },
+  "[typescriptreact]": {
+    "editor.tabSize": 2
+  },
+  "[typescript]": {
+    "editor.tabSize": 2
+  },
+  "editor.formatOnSave": true,
+  "python.formatting.provider": "none",
+  "python.formatting.blackArgs": [
+    "--line-length",
+    "120",
+    "--skip-string-normalization",
+    "--target-version",
+    "py310"
+  ],
+  "python.linting.enabled": true,
+  "python.linting.flake8Enabled": true,
+  "python.linting.flake8Args": [
+    "--max-line-length=120",
+    "--extend-ignore=E203,E302,E701"
+  ],
+  "[python]": {
+    "editor.codeActionsOnSave": {
+      "source.organizeImports": true
     },
-    "[typescriptreact]": {
-        "editor.tabSize": 2
-    },
-    "[typescript]": {
-        "editor.tabSize": 2
-    },
-    "editor.formatOnSave": true,
-    "python.formatting.provider": "black",
-    "python.formatting.blackArgs": [
-      "--line-length",
-      "120",
-      "--skip-string-normalization",
-      "--target-version",
-      "py310"
-    ],
-    "python.linting.enabled": true,
-    "python.linting.flake8Enabled": true,
-    "python.linting.flake8Args": [
-      "--max-line-length=120",
-      "--extend-ignore=E203,E302,E701"
-    ],
-    "[python]": {
-      "editor.codeActionsOnSave": {
-        "source.organizeImports": true
-      }
-    },
-    "python.defaultInterpreterPath": ".venv/bin/python"
-  }
-  
+    "editor.defaultFormatter": "ms-python.black-formatter"
+  },
+  "python.defaultInterpreterPath": ".venv/bin/python"
+}
